infra/k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensehub-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sensehub-web
  template:
    metadata:
      labels:
        app: sensehub-web
    spec:
      containers:
        - name: web
          image: sensehub/web:latest
          ports:
            - containerPort: 3000
